--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@angular/service-worker": "^17.2.3",
     "@angular/ssr": "^17.0.9",
     "express": "^4.18.2",
     "ngx-cookie-service": "^17.1.0",
